# firmata

./: .env.example  .gitignore  .gitmodules  .lintstagedrc  CHANGELOG.md  README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/: 001-The-Golden-Rule.mdc
.github/workflows/: ci.yml  rust-service-ci.yml
apps/docs/: package.json  tsconfig.json
apps/e2e-tests/: README.md  package.json  test-service.js
apps/service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  package.json
apps/service/config/: production.toml
apps/service/migrations/: 20240315000000_create_scraper_configs.sql  20240315000001_create_jobs.sql  20240315000002_create_pages.sql  20240315000003_create_webhooks.sql  20240317000000_fix_pages_schema.sql  20240317000001_fix_http_headers.sql
apps/service/proto/: markdown.proto
apps/service/scripts/: init-dev.sh
apps/service/src/: main.rs
apps/service/src/api/: health.rs  mod.rs
apps/service/src/api/handlers/: analytics.rs  configs.rs  jobs.rs  mod.rs  pages.rs  webhooks.rs
apps/service/src/api/routes/: health.rs  mod.rs
apps/service/src/application/: mod.rs
apps/service/src/application/scheduler/: service.rs
apps/service/src/application/scraper/: crawler.rs  mod.rs  service.rs  worker.rs
apps/service/src/config/: settings.rs
apps/service/src/domain/: job.rs  mod.rs  page.rs  scraper_config.rs  webhook.rs
apps/service/src/infrastructure/: mod.rs
apps/service/src/infrastructure/database/: mod.rs
apps/service/src/infrastructure/grpc/: markdown_client.rs  mod.rs
apps/service/src/infrastructure/queue/: mod.rs  redis_client.rs  redis_queue.rs
apps/service/src/infrastructure/storage/: mod.rs  s3_client.rs
apps/service/src/utils/: error.rs  logging.rs  mod.rs
apps/service/tests/: mod.rs
apps/service/tests/application/scraper/: crawler_test.rs
apps/storybook/: package.json
apps/storybook/.storybook/: main.ts
apps/storybook/src/stories/: Button.stories.ts
apps/web/: next.config.mjs  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json
apps/web/app/: global-error.tsx  layout.tsx  page.tsx
apps/web/app/scraper/: layout.tsx  page.tsx
apps/web/app/scraper/configs/: page.tsx
apps/web/app/scraper/configs/[id]/: page.tsx
apps/web/app/scraper/configs/[id]/edit/: page.tsx
apps/web/app/scraper/configs/[id]/start/: page.tsx
apps/web/app/scraper/configs/new/: page.tsx
apps/web/app/scraper/jobs/: page.tsx
apps/web/app/scraper/jobs/[id]/: page.tsx
apps/web/app/scraper/jobs/[id]/cancel/: page.tsx
apps/web/app/scraper/pages/: page.tsx
apps/web/app/scraper/pages/[id]/: page.tsx
apps/web/app/scraper/pages/[id]/html/: page.tsx
apps/web/app/scraper/pages/[id]/markdown/: page.tsx
apps/web/components/: app-sidebar.tsx
apps/web/lib/: api.ts
apps/web/providers/: index.tsx  query.tsx  theme.tsx
config/: default.toml  development.toml
tooling/next-config/: index.ts  package.json
tooling/typescript-config/: base.json
tooling/vitest-config/: package.json  tsconfig.json  turbo.json
tooling/vitest-config/configs/: base-config.ts
tooling/vitest-config/scripts/: collect-json-outputs.ts
