[package]
name = "fortai-scraper-service"
version = "0.1.0"
edition = "2021"
authors = ["Fortai Labs"]
description = "Legal website scraper microservice"

[dependencies]
# Core functionality
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"
futures = "0.3.30"
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# Web scraping
reqwest = { version = "0.11.23", features = ["json", "cookies", "gzip"] }
scraper = "0.18.1"
url = "2.5.0"
robotstxt = "0.3.0"
regex = "1.10.2"
md5 = "0.7.0"

# API and gRPC
axum = "0.7.4"
tonic = "0.10.2"
prost = "0.12.3"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors", "compression-gzip"] }

# Database and storage
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
aws-sdk-s3 = "1.12.0"
aws-config = "1.1.1"

# Job queue and scheduling
deadpool-redis = "0.14.0"
cron = "0.12.0"

# Configuration
config = "0.13.4"
dotenv = "0.15.0"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.3"
wiremock = "0.5.22"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "scraper-service"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs" 